test: DTO 변경 후 Service Test 작성